# CyberJumper

./: CMakeLists.txt  README.md  main.cpp
private/: BackgroundManager.cpp  BaseObject.cpp  Drawable.cpp  Nebula.cpp  NebulaeManager.cpp  Pawn.cpp  Scarfy.cpp  ScarfyGameManager.cpp  SoundManager.cpp
public/: BackgroundManager.h  BaseObject.h  Drawable.h  Nebula.h  NebulaeManager.h  Pawn.h  Scarfy.h  ScarfyGameManager.h  SoundManager.h
